--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "clonetinder_ass",
   "version": "1.0.0",
   "description": "TINDER",
-  "main": "inedx.js",
+  "main": "src/inedx.js",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "author": "no name",
   "license": "ISC"
