--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "TINDER",
   "main": "src/inedx.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.0"
+    "express-handlebars": "^5.3.0",
+    "mongoose": "^5.12.4",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
